argocd/system-manifests/proxy-to-istio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-to-istio
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "*.beansnet.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingress
            port:
              name: https
  tls:
  - hosts:
    - "*.beansnet.net"
    - "beansnet.net"
    secretName: proxy-to-istio-cert
